--- a/favoritos/style.css
+++ b/favoritos/style.css
@@ -21,17 +21,22 @@ header a {
     display: inline-block;
     margin-bottom: 20px;
     color: #f4f4f4;
-    margin-left: 15px;
+}
+
+ul {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
 }
 
 button {
-    opacity: 0.8;
     transition: opacity 0.7s;
+    margin-left: 10px;
+    background-color: #ff4136;
 }
 
-button {
-    display: inline;
-    background-color: #ff4136;
+button:hover {
+    opacity: 0.8;
 }
 
 main {}
