--- a/municipios/style.css
+++ b/municipios/style.css
@@ -23,14 +23,20 @@ header a {
     color: #f4f4f4;
 }
 
-button {
-    opacity: 0.8;
-    transition: opacity 0.7s;
+ul {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
 }
 
 button {
-    display: inline;
+    transition: opacity 0.7s;
+    margin-left: 10px;
     background-color: #ff4136;
+}
+
+button:hover {
+    opacity: 0.8;
 }
 
 main {}
