--- a/municipios/style.css
+++ b/municipios/style.css
@@ -29,17 +29,16 @@ ul {
     flex-direction: column;
 }
 
-button {
+img {
+    width: 15px;
+    height: 15px;
     transition: opacity 0.7s;
     margin-left: 10px;
-    background-color: #ff4136;
 }
 
-button:hover {
-    opacity: 0.8;
+img:hover {
+    opacity: 0.5;
 }
-
-main {}
 
 #lista-de-municipios {
     list-style: none;
