--- a/municipios/style.css
+++ b/municipios/style.css
@@ -4,6 +4,7 @@ body {
     width: 98vw;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
