--- a/so-as-melhores/tabela.css
+++ b/so-as-melhores/tabela.css
@@ -1,25 +1,41 @@
-h1, h2 {
-    text-align: center;
-}
-
-/* #conteiner { 
-    overflow-x: auto;
-//isso faz com que apenas a tabela tenha rolagem lateral quando
-//ela não couber na tela, porém quebra o cabeçalho fixo
-} */
-
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-table {
+header {
+    background-color: #0074d9;
+    text-align: center;
+    color: #f4f4f4;
+    margin-bottom: 45px;
+}
+
+header h1 {
+    padding: 12px;
     margin: auto;
+}
+
+h2 {
+    margin: 6px 0px;
+}
+
+header a {
+    display: inline-block;
+    color: #f4f4f4;
+    margin-bottom: 15px;
+    margin-right: 15px;
+    text-decoration: none;
+}
+
+a:hover {
+    font-weight: bold;
+}
+
+table {
     border-collapse: collapse;
     border: 2px solid black;
     width: auto;
     height: auto;
-    position: relative;
-    margin-bottom: 80px;
+    margin: auto;
 }
 
 tbody > tr:nth-child(even) {
@@ -38,4 +54,12 @@ td:hover {
     transform: scale(1.1);
     background-color: tomato;
     transition: background-color 1s;
+}
+
+footer {
+    color: #f4f4f4;
+    text-align: center;
+    background-color: #333;
+    padding: 24px;
+    margin-top: 55px;
 }
