--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     display: grid;
     grid-template-rows: auto 4fr auto;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 header {
@@ -21,7 +22,8 @@ header h1 {
 header a {
     display: inline-block;
     color: #f4f4f4;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    margin-right: 15px;
 }
 
 #lista-de-estados {
@@ -29,12 +31,12 @@ header a {
 }
 
 a {
-    color: #333;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
 }
 
 a:hover {
-    opacity: 0.8;
-    transition: opacity 0.7s;
+    font-weight: bold;
 }
 
 footer {
