--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     text-align: center;
 }
 
+main {
+    font-size: 1.2em;
+}
+
 header {
     background-color: #0074d9;
     text-align: center;
@@ -24,6 +28,7 @@ header a {
     color: #f4f4f4;
     margin-bottom: 15px;
     margin-right: 15px;
+    font-size: 1.1em;
 }
 
 #lista-de-estados {
@@ -31,7 +36,7 @@ header a {
 }
 
 a {
-    color: rgb(0, 0, 0);
+    color: black;
     text-decoration: none;
 }
 
